# MaxPyLang

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: __init__.py  genindex.html  index.html  indices.html  install.html  search.html  searchindex.js  support.html  tutorial.html
docs/API/: API.html  inlet.html  maxobject.html  maxpatch.html  outlet.html
docs/doctrees/: environment.pickle  index.doctree  indices.doctree  install.doctree  support.doctree  tutorial.doctree
docs/doctrees/API/: API.doctree  inlet.doctree  maxobject.doctree  maxpatch.doctree  outlet.doctree
docs/doctrees/topics/: ext_packages.doctree  linked_files.doctree  topics.doctree  unknown_objs.doctree
docs/source/: __init__.py  conf.py
docs/topics/: ext_packages.html  linked_files.html  topics.html  unknown_objs.html
examples/: __init__.py
examples/NIME2023/: NIME-demos.ipynb
examples/attributes/: __init__.py  main.py
examples/basic-sonification-using-abstracted-csvReader/: __init__.py  tester2-edited.py  tester2_edited.py
examples/chess-paper-example/: README.md  __init__.py  maxpy_chess_generation.py
examples/hello_world/: __init__.py  main.py
examples/random_pitch_generator/: __init__.py  tester3.py
examples/selective-midi-note-generator/: __init__.py  tester2.py
examples/stocksonification_v1/: __init__.py  stocksounds.py
examples/variable-osc-synth/: build-additive-synth.ipynb
maxpylang/: __init__.py  exceptions.py  importobjs.py  maxobject.py  maxpatch.py  xlet.py
maxpylang/data/: constants.json
maxpylang/objects/: __init__.py  jit.py  max.py  msp.py
maxpylang/test/: __init__.py
maxpylang/tools/: __init__.py  constants.py  misc.py  typechecks.py
maxpylang/tools/objfuncs/: __init__.py  (+9 more)
tests/: __init__.py  conftest.py  test_importobjs.py  test_objects_and_patches.py  test_package_core.py  test_patch_helpers.py  test_small_helpers.py
tests/maxpylang/: __init__.py  test___init__.py  test_exceptions.py  test_importobjs.py  test_maxobject.py  test_maxpatch.py  test_xlet.py
(+34 files in other folders)
